<resources>
    <string name="app_name">ToDoApp</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="update_todo">Update Todo</string>
    <string name="choose_date">Choose Date</string>
    <string name="update">Update</string>
    <string name="add_new_todo">Add New Todo</string>
    <string name="add">Add</string>
    <string name="done">Done!</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="details">details</string>
    <string name="title">title</string>
    <string name="Title">Title</string>
    <string name="Details">details</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>