<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_new_todo"
        android:gravity="center"
        android:textSize="22dp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        />

    <!--    the diffrence between this and normal edit text, only te shape in run-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:hint="@string/Title"
            android:textSize="22dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/task_detalis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:hint="@string/details"
            android:textSize="22dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/ChooseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/details_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/choosedate"
        android:textSize="15dp"
        android:paddingLeft="38dp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ChooseDate"
        android:layout_margin="10dp"
        android:text="@string/add"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"


        />

</androidx.constraintlayout.widget.ConstraintLayout>