<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back_ground_of_card">

    <ImageView
        android:id="@+id/shape"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="150dp"
        android:background="@color/blue_dark">
    </ImageView>
    
<!--this guild line to make the cardview up as the design-->
    
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guide_line"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_begin="70dp"/>
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guide_line"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="100dp"
        style="@style/CardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/update_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/update_todo"
                android:gravity="center"
                android:textSize="22dp"
                android:textStyle="bold"
                android:paddingTop="10dp"
                />

            <!--    the diffrence between this and normal edit text, only te shape in run-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/update_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <EditText
                    android:id="@+id/update_task_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="28dp"
                    android:hint="@string/title"
                    android:textSize="22dp"
                    android:lines="2"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/update_title_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/update_task_detalis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="28dp"
                    android:hint="@string/Details"
                    android:textSize="22dp"
                    android:lines="2"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/update_ChooseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/update_details_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="28dp"
                android:text="@string/choose_date"
                android:textSize="15dp"
                android:paddingLeft="12dp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/update_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/update_ChooseDate"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="10dp"
                android:text="@string/update"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textAlignment="center"
                style="@style/BUTTON"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>